[package]
name = "substrate-rpc"
version = "0.1.0"
authors = ["Alain <alain.brenzikofer@scs.ch>"]
edition = "2018"

[dependencies]
futures = "0.1"
hyper = "0.12"
tokio-core = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
parity-codec = { version = "3.0", default-features = false }
parity-codec-derive = { version = "3.0", default-features = false }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate.git" }
srml_metadata = { package = "srml-metadata", git = "https://github.com/paritytech/substrate.git" }
hex = "0.3"
#keyring = { package = "substrate-keyring", git = "https://github.com/paritytech/substrate.git" }
#test_client = { package = "substrate-test-client", git = "https://github.com/paritytech/substrate.git" }

